altered size of learn more button and fixed lore gallery images clipping in homepage

--- a/style.css
+++ b/style.css
@@ -202,16 +202,16 @@ div.top {
 	position: absolute;
 	transform: translateX(-50%);
 	left: 50vw;
-	bottom: 3.5vw;
-	width: 17vw;
-	height: 3vw;
-	line-height: 3vw;
+	bottom: 2.5vw;
+	width: 11vw;
+	height: 2vw;
+	line-height: 2vw;
 	text-align: center;
-	font-size: 1.5vw;
+	font-size: 1vw;
 	color: white;
 	font-family: Raleway;
 	font-weight: 200;
-	letter-spacing: 0.4vw;
+	letter-spacing: 0.3vw;
 	background-color: black;
 	border: 1px solid white;
 	text-align: center;
@@ -222,22 +222,22 @@ div.top {
 #arrow1 {
 	position: absolute;
 	background-color: white;
-	width: 3vw;
+	width: 1.5vw;
 	height: 2px;
 	transform-origin: right;
 	transform: rotate(45deg);
-	bottom: 2vw;
+	bottom: 1.5vw;
 	right: 50vw;
 	opacity: 0;
 }
 #arrow2 {
 	position: absolute;
 	background-color: white;
-	width: 3vw;
+	width: 1.5vw;
 	height: 2px;
 	transform-origin: left;
 	transform: rotate(315deg);
-	bottom: 2vw;
+	bottom: 1.5vw;
 	left: 50vw;
 	opacity: 0;
 }
@@ -483,7 +483,7 @@ img.loreimg {
 	height: 56%;
 	left: 11%;
 	top: 12%;
-	object-fit: cover;
+	object-fit: contain;
 }
 p.lorelbl {
 	position: absolute;
